# deepagents-microsandbox

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  frontend_handoff.md  implementation_plan.md  justfile
backend/: README.md  langgraph.json  pyproject.toml
backend/app/: config.py  security.py
backend/app/agent/: backend.py  graph.py  models.py  prompts.py  tools.py
backend/app/api/: auth.py  dependencies.py  main.py
backend/app/api/routes/: admin.py  auth.py  chat.py  files.py  health.py  threads.py
backend/app/db/: models.py  queries.py  repositories.py  session.py
backend/app/db/migrations/: README.md
backend/app/services/: audit_service.py  auth_service.py  file_service.py  login_throttle_service.py  message_service.py  run_event_service.py  run_service.py  runtime_service.py  stream_service.py  thread_service.py  user_service.py
backend/app/storage/: minio.py
backend/scripts/: langgraph_docker.py
backend/tests/: conftest.py  test_agent_backend.py  test_api.py  test_auth.py  test_config.py  test_file_service.py  test_graph.py  test_langgraph_docker.py  test_runtime_service.py  test_stream_service.py  test_thread_service.py
docs/: glossary.md  index.md  self-hosted-runtime-migration.md
docs/api-reference/: backend-endpoints.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
future_enhancements/: granular_rbac_proposal.md  persistent_thread_sandbox_plan.md  rbac-authentication-implementation-plan.md  rbac_security_audit_report.md
microsandbox-executor/: .env.example  README.md
(+85 files in other folders)
