[project]
name = "deepagent-sandbox-backend"
version = "0.1.0"
description = "Backend API and LangGraph app scaffold for the DeepAgent Sandbox PoC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "deepagents>=0.3,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langchain>=1.1,<2",
  "langchain-openai>=1.0,<2",
  "langgraph-checkpoint-postgres>=2.0,<3",
  "minio>=7.2,<8",
  "pydantic-settings>=2.4,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "tests",
  "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
